rerun all notebooks

--- a/classic/A_B_marketing.ipynb
+++ b/classic/A_B_marketing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "095ef701-d3e4-42c6-8bb2-cee4a8269c9b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "beb77694-8ad6-451a-8e80-1bae510d80be",
    "metadata": {},
    "outputs": [],
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0f1cbf56-7701-4538-b294-f88b9732ec4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_data = pd.read_csv(\"data/A_B_marketing/marketing_AB.csv\")"
+    "original_data = pd.read_csv(\"../data/A_B_marketing/marketing_AB.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6fe4d334-bee7-4b3a-8650-dc6e3a1ad014",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "(588101, 7)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,9 +90,7 @@
   {
    "cell_type": "markdown",
    "id": "53e97afa-6de8-4b0c-820e-9aefc203a4f5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Исследование и обработка данных"
    ]
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ddb39a41-57a4-439f-8e89-5cf9a290107f",
    "metadata": {},
    "outputs": [
@@ -212,7 +210,7 @@
        "4             14  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dd7a4659-6f27-481b-bc86-d0aa61a05f42",
    "metadata": {},
    "outputs": [
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "92e74560-1aba-4caa-b4c6-569c3b4d54d3",
    "metadata": {},
    "outputs": [
@@ -358,7 +356,7 @@
        "max    588100.000000  1.654483e+06    2065.000000      23.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "de4ab021-20d0-49d0-a626-a21a663b798d",
    "metadata": {},
    "outputs": [
@@ -401,7 +399,7 @@
        "       'Thursday'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "08f605f5-3d75-4950-8b01-a0e051fd77d8",
    "metadata": {},
    "outputs": [],
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f44b916d-c699-48c0-a494-bc3fe24de95e",
    "metadata": {},
    "outputs": [
@@ -451,7 +449,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "b837e382-b9fe-4f55-832d-202aa51ba59c",
    "metadata": {},
    "outputs": [],
@@ -483,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "449c5f9e-d657-4014-be9a-6a96b0155634",
    "metadata": {},
    "outputs": [
@@ -515,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "936fd625-b76a-4155-9266-1fb9796a6965",
    "metadata": {},
    "outputs": [
@@ -525,7 +523,7 @@
        "585"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "984d6da1-217e-4767-b9dd-0343c97d446a",
    "metadata": {},
    "outputs": [],
@@ -572,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "a7c28fb6-8601-4d45-9b7e-e8dddab8f7dc",
    "metadata": {},
    "outputs": [],
@@ -604,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "6da87aec-9517-437a-9f4a-1bf89b3f0397",
    "metadata": {},
    "outputs": [],
@@ -642,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "28f7ccf0-cd34-40e9-8bc5-98282a1d0f5e",
    "metadata": {},
    "outputs": [],
@@ -656,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "e1a6d113-5c72-4fb6-9d28-a49958e605db",
    "metadata": {},
    "outputs": [],
@@ -666,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "22f5e52d-8830-4a37-9b43-7d6902c4ff69",
    "metadata": {},
    "outputs": [
@@ -764,7 +762,7 @@
        "4   4  1015700          A      False        276             5             14"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "2d3ff0e9-11c2-49ac-ba47-5e939aa64847",
    "metadata": {},
    "outputs": [
@@ -806,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "6c4f7869-f1bf-44e2-a8ee-f7874200ef8e",
    "metadata": {},
    "outputs": [
@@ -929,7 +927,7 @@
        "max        23.000000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,9 +939,7 @@
   {
    "cell_type": "markdown",
    "id": "c3526433-4490-4f46-9141-4d39fd90c88a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Первичный анализ результатов A/B-тестирования"
    ]
@@ -970,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "031aff10-e0b7-4d75-a06e-4785b8caf1d6",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1025,7 @@
        "1     B          23505              418       24.296022    1.778345"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "3d8b7fe9-6bf6-4beb-942e-374be7dcc218",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "45bb6189-6606-4c31-ae9b-dd7415fe4910",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1295,7 @@
        "13    2.060170  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "786c6b96-9dc6-48db-b17c-aac8c7acd65d",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "cd37db19-102c-4836-a32e-78ccf5897870",
    "metadata": {},
    "outputs": [
@@ -1402,9 +1398,7 @@
   {
    "cell_type": "markdown",
    "id": "c9017ff9-63cd-42fb-9d33-bdc8fd102fa1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Статистический анализ результатов A/B-тестирования"
    ]
@@ -1427,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "f5bea954-0157-41c5-8cd5-a9a256be0270",
    "metadata": {},
    "outputs": [
@@ -1460,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "cd3e99c6-3e8a-4d80-8616-18cb17ec7a00",
    "metadata": {},
    "outputs": [
@@ -1518,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "70f70cff",
    "metadata": {},
    "outputs": [
@@ -1587,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "2dadbda8-8518-4317-87b1-11c50e83051e",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "ce863d35-a773-48de-b711-27cf57a1c7ec",
    "metadata": {},
    "outputs": [
@@ -1673,16 +1667,14 @@
   {
    "cell_type": "markdown",
    "id": "bdca3af9-c710-477c-9deb-57076608d5d2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Построение доверительных интервалов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "id": "7beaa9f3-6acf-4752-b4f3-c661f9f83d85",
    "metadata": {},
    "outputs": [
@@ -1780,7 +1772,7 @@
        "4   4  1015700          A      False        276             5             14"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "id": "3e62abb5-b0a0-4181-a899-00d1ad2c4de4",
    "metadata": {},
    "outputs": [],
@@ -1802,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "c76c21c4-3833-4fa1-9c4f-d5a08efa3d24",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "id": "46f5fe02-b11b-46a2-b9a0-fc10d110c654",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "id": "dd9e5dfe-af60-4d56-8939-8ecc00ed1160",
    "metadata": {},
    "outputs": [],
@@ -1915,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "d978e6e0-a49b-4204-89dc-4d6e49a96d48",
    "metadata": {},
    "outputs": [
