--- a/classic/toxic_comments.ipynb
+++ b/classic/toxic_comments.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "f8451757-7931-4153-9595-f94dcee8437d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Установка и импорт библиотек"
    ]
@@ -61,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/toxic_comments/data_civil.csv')"
+    "df = pd.read_csv('../data/toxic_comments/data_civil.csv')"
    ]
   },
   {
@@ -284,9 +282,7 @@
   {
    "cell_type": "markdown",
    "id": "7d65fc97-ac45-42f4-a146-66fb180ea585",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Анализ данных"
    ]
@@ -961,9 +957,7 @@
   {
    "cell_type": "markdown",
    "id": "dedae429-caa1-40b6-ac57-a6d720f94ac3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Построение baseline модели"
    ]
@@ -1278,9 +1272,7 @@
   {
    "cell_type": "markdown",
    "id": "e0324aa7-37f5-4aa7-b507-16f83e4ccfd3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Эксперемент с использованием признаков религии"
    ]
@@ -1386,9 +1378,7 @@
   {
    "cell_type": "markdown",
    "id": "722a5f78-f6dd-4d1f-8ac9-86dd3b825bea",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Эксперемент с регулязацией"
    ]
