--- a/dl/fashion_mnist.ipynb
+++ b/dl/fashion_mnist.ipynb
@@ -570,7 +570,11 @@
     }
    ],
    "source": [
-    "train_df = pd.read_csv(\"/content/fashion-mnist-testn/fmnist_train.csv\")\n",
+    "BASE_PATH = '/content/fashion-mnist-testn/'\n",
+    "train_df = pd.read_csv(f\"{BASE_PATH}fmnist_train.csv\")\n",
+    "test_df = pd.read_csv(f\"{BASE_PATH}fmnist_test.csv\")\n",
+    "sample_submission_df = pd.read_csv(f\"{BASE_PATH}sample_submission.csv\")\n",
+    "\n",
     "train_df.head()"
    ]
   },
@@ -1011,7 +1015,6 @@
     }
    ],
    "source": [
-    "test_df = pd.read_csv(\"/content/fashion-mnist-testn/fmnist_test.csv\")\n",
     "test_df.head()"
    ]
   },
@@ -1322,7 +1325,6 @@
     }
    ],
    "source": [
-    "sample_submission_df = pd.read_csv(\"/content/fashion-mnist-testn/sample_submission.csv\")\n",
     "sample_submission_df.head()"
    ]
   },
