--- a/classic/tutors_lessons_prices.ipynb
+++ b/classic/tutors_lessons_prices.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,15 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "id": "qA3xgynx_lsn"
    },
    "outputs": [],
    "source": [
-    "train = pd.read_excel('data/tutors/tutors_train.xlsx')\n",
-    "test = pd.read_excel('data/tutors/tutors_test.xlsx')\n",
-    "sample_submit = pd.read_csv('data/tutors/sample_submit.csv')\n",
+    "train = pd.read_excel('../data/tutors/tutors_train.xlsx')\n",
+    "test = pd.read_excel('../data/tutors/tutors_test.xlsx')\n",
+    "sample_submit = pd.read_csv('../data/tutors/sample_submit.csv')\n",
     "\n",
     "X = train.drop(columns=['mean_price']).copy(deep=True)\n",
     "y = train['mean_price'].copy(deep=True)"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -265,7 +265,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -420,7 +420,7 @@
        "[2 rows x 27 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -487,7 +487,7 @@
        "1      1    0.903784"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "Ученое звание 2            4547               99.98"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "experience                   25                0.55"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "        ' Частный преподаватель', ' 19 лет ']], dtype=object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "4  ['Школьники с 5 по 9 класс', 'Школьники с 10 п...  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
        "2            True                   True         2008         2014  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,16 +1435,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Обработка категориальных признаков"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1463,7 +1461,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1493,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1655,7 @@
        "18                             Mathematik auf Deutsch      5"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1823,7 @@
        "18                              Дошкольники группа      1"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1883,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2040,7 @@
        "[3 rows x 48 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,16 +2108,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Обработка таргета"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2124,7 @@
        "<Axes: ylabel='mean_price'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2163,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2188,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2228,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2251,14 +2247,14 @@
       "R2 score: 0.1334433906421213\n",
       "\n",
       "DecisionTreeRegressor\n",
-      "Mean Absolute Error: 8.522146721894982\n",
-      "Mean Squared Error: 162.88908691867664\n",
-      "R2 score: -0.42713270863091335\n",
+      "Mean Absolute Error: 8.405092881555428\n",
+      "Mean Squared Error: 157.18942996555253\n",
+      "R2 score: -0.37719586498073054\n",
       "\n",
       "KNeighborsRegressor\n",
-      "Mean Absolute Error: 7.701401632995957\n",
-      "Mean Squared Error: 130.85070012152545\n",
-      "R2 score: -0.14643232166876685\n",
+      "Mean Absolute Error: 7.6843781626391525\n",
+      "Mean Squared Error: 130.14834671955475\n",
+      "R2 score: -0.14027873868827534\n",
       "\n",
       "RandomForestRegressor\n",
       "Mean Absolute Error: 6.249970254643854\n",
@@ -2276,9 +2272,9 @@
       "R2 score: 0.009493699350833773\n",
       "\n",
       "LinearSVR\n",
-      "Mean Absolute Error: 11.409058131008756\n",
-      "Mean Squared Error: 235.81545880783554\n",
-      "R2 score: -1.0660681500012799\n"
+      "Mean Absolute Error: 17.19412876390607\n",
+      "Mean Squared Error: 415.9463672142054\n",
+      "R2 score: -2.644262957799998\n"
      ]
     }
    ],
@@ -2352,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2362,7 +2358,7 @@
        "       -101.38534538])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,17 +2370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-85.89896555, -71.58379801, -79.04006382, -95.15759543,\n",
-       "       -99.02913794])"
+       "array([-85.99816855, -71.56834385, -78.24106519, -95.0265471 ,\n",
+       "       -98.64225267])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2418,9 +2414,9 @@
      "output_type": "stream",
      "text": [
       "Лучшие параметры: {'bootstrap': True, 'max_depth': 25, 'min_samples_leaf': 2, 'min_samples_split': 10, 'n_estimators': 395}\n",
-      "Mean Absolute Error: 6.134293585738963\n",
-      "Mean Squared Error: 90.38107377749583\n",
-      "R2 score: 0.20813733400418055\n"
+      "Mean Absolute Error: 6.133182989032533\n",
+      "Mean Squared Error: 90.37527778782554\n",
+      "R2 score: 0.2081881148550886\n"
      ]
     }
    ],
@@ -2464,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2494,7 +2490,7 @@
     "\n",
     "submition = pd.DataFrame(y_test, columns=['mean_price'])\n",
     "submition = submition.reset_index()\n",
-    "submition.to_csv('LinearRegression_submit.csv', index=False);"
+    "submition.to_csv('tutors-LinearRegression-submit.csv', index=False);"
    ]
   },
   {
@@ -2506,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2513,7 @@
     "\n",
     "submition = pd.DataFrame(y_test, columns=['mean_price'])\n",
     "submition = submition.reset_index()\n",
-    "submition.to_csv('RandomForestRegressor_submit.csv', index=False);"
+    "submition.to_csv('tutors-RandomForestRegressor-submit.csv', index=False);"
    ]
   },
   {
